# promt_hub

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/api/: __init__.py  application.py  main.py  responses.py
app/api/technical/: router.py
app/core/: settings.py
app/core/database/: __init__.py  pool.py
app/core/di/: providers.py
tests/: conftest.py
tests/api/technical/: test_technical.py
